Improve image rendering performance

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "like-talk2wall",
+  "description": "like taking to a wall",
   "version": "1.0.0",
-  "author": "Hunter Chang",
+  "author": "yo1000 | YO!CHI KIKUCHI",
   "dependencies": {
     "gatsby": "^2.2.9",
+    "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-source-filesystem": "^2.1.8",
+    "gatsby-transformer-sharp": "^2.2.5",
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
