--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "like-talk2wall",
-  "description": "like taking to a wall",
+  "description": "like talking to a wall",
   "version": "1.0.0",
   "author": "yo1000 | YO!CHI KIKUCHI",
   "dependencies": {
